feat: better default value handling.

--- a/themes/bootstrap3/templates/_ui/components/confirm-menu.phtml
+++ b/themes/bootstrap3/templates/_ui/components/confirm-menu.phtml
@@ -4,10 +4,10 @@
   }
 
   $attrs = $this->attrs ?? [];
-  $attrs['class'] = trim('confirm-menu ' . $attrs['class']);
+  $attrs['class'] = trim('confirm-menu ' . ($attrs['class'] ?? ''));
 
   $toggleLabelEsc = $this->transEsc($this->label);
-  $toggleClassAttr = trim('confirm__toggle ' . $this->toggleClass ?? '');
+  $toggleClassAttr = trim('confirm__toggle ' . ($this->toggleClass ?? ''));
   $toggleAttrs = $this->toggleAttrs ?? [];
 
   $actionType = $this->action->type ?? 'submit';
