--- a/themes/bootstrap3/templates/RecordDriver/SolrOverdrive/hold.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/SolrOverdrive/hold.phtml
@@ -2,7 +2,7 @@
   <?php if($action == 'getTitle'): ?>
     <h2><?=$this->transEsc($actionTitleCode); ?>
         <span class="odbrand pull-left">
-          <img class="media-left" src="https://developerportaldev.blob.core.windows.net/media/Default/images/newLogos/OverDrive_Logo_28x28_rgb.jpg">
+          <img class="media-left" src="<?=$this->imageLink('OverDrive_Logo_28x28_rgb.jpg')?>">
         </span>
     </h2>
     <iframe class="od_download" src="<?=$result->data->downloadRedirect?>"></iframe>
@@ -11,8 +11,8 @@
  <div class="media clearfix">
      <div class="media-body">
     <h2><?=$this->transEsc($actionTitleCode); ?>
-        <span class="odbrand pull-left">
-          <img class="media-left" src="https://developerportaldev.blob.core.windows.net/media/Default/images/newLogos/OverDrive_Logo_28x28_rgb.jpg">
+        <span class="odbrand pull-left"
+          <img class="media-left" src="<?=$this->imageLink('OverDrive_Logo_28x28_rgb.jpg')?>">
         </span>
     </h2>
          <div class="pull-right  img-col">
@@ -44,12 +44,12 @@
 
             <form class="form-record-hold" method="POST" name="placeHold" data-lightbox-onclose="VuFind.refreshPage">
 
-            <?php  if ($isMagazine): ?>
+            <?php  if ($result->data->isMagazine): ?>
               <div class="form-group">
                 <label id="select-issue-label"><?=$this->translate('Issue') ?></label>
                 <select class="form-control" name="edition" id="select-edition" data-open="false">
 
-                <?php foreach ($issues as $key => $issue):
+                <?php foreach ($result->data->products as $key => $issue):
                     $checkedout = $issue->checkedout ? ' - ' . $this->transEsc('od_mag_issue_ischeckedout') : ''; ?>
                     <option value="<?=$issue->id?>"><?=$issue->edition . $checkedout?> </option>
                 <?php endforeach;?>
@@ -143,7 +143,7 @@
         <form class="" method="POST" name="editHoldEmail" data-lightbox-onclose="VuFind.refreshPage">
             <div class="form-group">
                 <label class="control-label"><?=$this->transEsc('Email Address'); ?></label>
-                <input id="email" name="email" value="<?=$this->holdEmail?>" size="" class="form-control" type="text">
+                <input id="email" name="email" value="<?=$result->data->hold->emailAddress?>" size="" class="form-control" type="text">
 
             </div>
             <div class="form-group">
@@ -212,7 +212,7 @@
 
     <div class="returnTitleDialog">
 
-        <?php  if ($isMagazine): ?>
+        <?php  if ($result->data): ?>
           <h4><?=$edition?></h4>
         <?php endif;?>
         <p><?=$this->transEsc('od_return_confirm'); ?></p>
