--- a/themes/bootstrap3/templates/myresearch/odmycontent.phtml
+++ b/themes/bootstrap3/templates/myresearch/odmycontent.phtml
@@ -9,7 +9,7 @@
 <div class="<?=$this->layoutClass('mainbody')?>">
   <h2>
     <div class="odbrand pull-left">
-        <img class="media-left" src="https://developerportaldev.blob.core.windows.net/media/Default/images/newLogos/OverDrive_Logo_28x28_rgb.jpg">
+        <img class="media-left" src="<?=$this->imageLink('OverDrive_Logo_28x28_rgb.jpg')?>">
     </div>
     <?=$this->transEsc('od_content')?>
   </h2>
@@ -68,7 +68,7 @@
             </a>
           </h4>
 
-          <div class="od_edition"><?=$edition?></div>
+          <div class="od_edition"><?=$this->escapeHtml($edition)?></div>
 
           <?php $listAuthors = $resource['record']->getPrimaryAuthors() ?>
           <?php if (!empty($listAuthors)): ?>
@@ -85,7 +85,7 @@
               <a
                 class="btn btn-warning icon-link returnTitle"
                 data-lightbox title="<?=$this->transEsc('od_but_return')?>"
-                href="<?=$this->url('overdrive-hold') . "?od_id=$od_id&rec_id=$rec_id&edition=$edition&action=returnTitleConfirm"; ?>"
+                href="<?=$this->url('overdrive-hold') . "?od_id=$od_id&rec_id=$rec_id&edition=".urlencode($edition)."&action=returnTitleConfirm"; ?>"
               >
                 <?=$this->icon('overdrive-return', 'icon-link__icon') ?>
                 <span class="icon-link__label"><?=$this->transEsc('od_but_return')?></span>
@@ -217,12 +217,6 @@
       <?php endforeach;?>
     </ul>
   <?php endif;?>
-<!--
-  <h3><?=$this->transEsc('od_history')?></h3>
-       <div class="alert alert-info"><?=$this->icon('warning') ?>
-        Coming Soon.
-      </div>
--->
 </div>
 
 <div class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar" role="navigation" aria-label="<?=$this->transEsc('account_menu_label')?>">
