--- a/themes/bootstrap3/templates/search/home.phtml
+++ b/themes/bootstrap3/templates/search/home.phtml
@@ -12,10 +12,14 @@
   }
 
   $this->layout()->breadcrumbs = false;
-  $searchStickyElement = $this->stickyElement()->getElementAttributes('home-search', 3);
+  $homeSearchAttributes = $this->stickyElement()->getElementAttributes(
+    'home-search',
+    3,
+    ['class' => 'searchHomeContent']
+  );
 ?>
 
-<div class="searchHomeContent <?=$searchStickyElement['class']?>" <?=$searchStickyElement['posAttr']?>>
+<div <?= $this->htmlAttributes($homeSearchAttributes) ?>>
   <?php $this->slot('search-home-hero')->start() ?>
     <?=$this->context($this)->renderInContext('search/searchbox.phtml', ['ignoreHiddenFilterMemory' => true])?>
     <?=$this->inlineScript(\Laminas\View\Helper\HeadScript::SCRIPT, '$("#searchForm_lookfor").focus();', 'SET'); ?>
