--- a/themes/bootstrap3/templates/notifications/pagesform.phtml
+++ b/themes/bootstrap3/templates/notifications/pagesform.phtml
@@ -28,47 +28,49 @@ $form->prepare();
       <?= $this->formElementErrors()->render($isExternalUrl, ['class' => 'help-block']) ?>
   </div>
 
-  <ul>
-    <?php foreach($this->languages as $language): ?>
-      <li><a href="#notifications-tabs-<?=$language?>"><?=$this->transEsc('pages_tab_header')?> (<?=strtoupper($language)?>)</a></li>
+  <ul class="notifications-tabs">
+    <?php foreach($this->languages as $index => $language): ?>
+      <li class="<?=$index == 0 ? ' active' : ''?>"><a href="#" class="notifications-tabs-nav" data-tab="notifications-tabs-<?=$language?>"><?=$this->transEsc('pages_tab_header')?> (<?=strtoupper($language)?>)</a></li>
     <?php endforeach; ?>
   </ul>
 
-  <?php foreach($this->languages as $language): ?>
-    <div id="notifications-tabs-<?=$language?>">
-      <div class="form-group">
-          <?php $navTitle = $form->get('nav_title_' . $language); ?>
-          <?= $this->formLabel($navTitle) ?>
-          <?= $this->formElement($navTitle) ?>
-          <?= $this->formElementErrors()->render($navTitle, ['class' => 'help-block']) ?>
-      </div>
-
-      <div class="not_external_url_content">
+  <div class="notifications-tabs-content-wrapper">
+    <?php foreach($this->languages as $index => $language): ?>
+      <div id="notifications-tabs-<?=$language?>" class="notifications-tabs-content<?=$index == 0 ? ' active' : ''?>">
         <div class="form-group">
-            <?php $headline = $form->get('headline_' . $language); ?>
-            <?= $this->formLabel($headline) ?>
-            <?= $this->formElement($headline) ?>
-            <?= $this->formElementErrors()->render($headline, ['class' => 'help-block']) ?>
+            <?php $navTitle = $form->get('nav_title_' . $language); ?>
+            <?= $this->formLabel($navTitle) ?>
+            <?= $this->formElement($navTitle) ?>
+            <?= $this->formElementErrors()->render($navTitle, ['class' => 'help-block']) ?>
         </div>
 
-        <div class="form-group">
-            <?php $content = $form->get('content_' . $language); ?>
-            <?php $content->setLabelOptions(['disable_html_escape' => true]); ?>
-            <?= $this->formLabel($content) ?>
-            <?= $this->formElement($content) ?>
-            <?= $this->formElementErrors()->render($content, ['class' => 'help-block']) ?>
+        <div class="not_external_url_content">
+          <div class="form-group">
+              <?php $headline = $form->get('headline_' . $language); ?>
+              <?= $this->formLabel($headline) ?>
+              <?= $this->formElement($headline) ?>
+              <?= $this->formElementErrors()->render($headline, ['class' => 'help-block']) ?>
+          </div>
+
+          <div class="form-group">
+              <?php $content = $form->get('content_' . $language); ?>
+              <?php $content->setLabelOptions(['disable_html_escape' => true]); ?>
+              <?= $this->formLabel($content) ?>
+              <?= $this->formElement($content) ?>
+              <?= $this->formElementErrors()->render($content, ['class' => 'help-block']) ?>
+          </div>
+        </div>
+
+        <div class="form-group external_url_content">
+            <?php $externalUrl = $form->get('external_url_' . $language); ?>
+            <?php $externalUrl->setLabelOptions(['disable_html_escape' => true]); ?>
+            <?= $this->formLabel($externalUrl) ?>
+            <?= $this->formElement($externalUrl) ?>
+            <?= $this->formElementErrors()->render($externalUrl, ['class' => 'help-block']) ?>
         </div>
       </div>
-
-      <div class="form-group external_url_content">
-          <?php $externalUrl = $form->get('external_url_' . $language); ?>
-          <?php $externalUrl->setLabelOptions(['disable_html_escape' => true]); ?>
-          <?= $this->formLabel($externalUrl) ?>
-          <?= $this->formElement($externalUrl) ?>
-          <?= $this->formElementErrors()->render($externalUrl, ['class' => 'help-block']) ?>
-      </div>
-    </div>
-  <?php endforeach; ?>
+    <?php endforeach; ?>
+  </div>
 </div>
 
 <div class="form-group">
