Fix getViewForPhtml, revert other changes.

--- a/themes/bootstrap3/templates/layout/layout.phtml
+++ b/themes/bootstrap3/templates/layout/layout.phtml
@@ -127,14 +127,11 @@
       if ($this->config()->ajaxCoversEnabled()) {
           $this->headScript()->appendFile('covers.js');
       }
-      $convertTemplateClassName = function ($s) {
-        return preg_replace('/[^a-zA-Z0-9_-]/', '__', $s);
-      };
     ?>
     <?=$this->cookieConsent()->render()?>
     <?=$this->headScript() ?>
   </head>
-  <body class="template-dir-<?=$convertTemplateClassName($this->templateDir)?> template-name-<?=$convertTemplateClassName($this->templateName)?> <?=$this->layoutClass('offcanvas-row')?><?php if ($this->layout()->rtl): ?> rtl<?php endif; ?>">
+  <body class="template-dir-<?=$this->templateDir?> template-name-<?=$this->templateName?> <?=$this->layoutClass('offcanvas-row')?><?php if ($this->layout()->rtl): ?> rtl<?php endif; ?>">
     <header class="hidden-print">
       <?php if (isset($this->layout()->srmessage)): // message for benefit of screen-reader users ?>
         <span class="sr-only" role="heading" aria-level="1"><?=$this->layout()->srmessage ?></span>
