Use components and icon helper with offcanvas, fix issues.

--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -778,8 +778,14 @@ table.search-history-table {
     .mainbody,
     .sidebar {
       float: none;
+    }
+    .mainbody {
       width: auto;
       padding: 0;
+      margin-bottom: 1rem;
+    }
+    &:not(.vufind-offcanvas.active) .sidebar {
+      width: auto;
     }
   }
 }
