--- a/themes/bootstrap3/templates/myresearch/edit.phtml
+++ b/themes/bootstrap3/templates/myresearch/edit.phtml
@@ -11,10 +11,7 @@
     ) . '<li class="active">' . $this->transEsc('Edit') . '</li>';
 ?>
 <div class="<?=$this->layoutClass('mainbody')?>">
-  <a class="search-filter-toggle visible-xs" href="#myresearch-sidebar"
-    data-toggle="vufind-offcanvas" aria-label="<?=$this->transEsc('sidebar_expand')?>">
-    <?=$this->transEsc('Your Account') ?>
-  </a>
+  <?=$this->component('account-offcanvas-show')?>
 
   <h2><?=$this->escapeHtml($this->driver->getBreadcrumb())?></h2>
 
