--- a/themes/bootstrap3/templates/myresearch/editlist.phtml
+++ b/themes/bootstrap3/templates/myresearch/editlist.phtml
@@ -12,9 +12,7 @@
 
 <?php if ($this->auth()->getIdentity() && $this->layout()->getTemplate() !== 'layout/lightbox') :?>
   <div class="<?=$this->layoutClass('mainbody')?>">
-  <a class="search-filter-toggle visible-xs" href="#myresearch-sidebar" data-toggle="vufind-offcanvas" aria-label="<?=$this->transEsc('sidebar_expand')?>">
-      <?=$this->transEsc('Your Account') ?>
-  </a>
+  <?=$this->component('account-offcanvas-show')?>
 <?php endif; ?>
 
 <h2><?=$this->transEsc($pageTitle); ?></h2>
