--- a/themes/bootstrap3/templates/search/history.phtml
+++ b/themes/bootstrap3/templates/search/history.phtml
@@ -17,9 +17,7 @@
 ?>
 
 <?php if ($saveSupported): // do not show menu toggle if not showing menu! ?>
-  <a class="search-filter-toggle visible-xs" href="#myresearch-sidebar" data-toggle="vufind-offcanvas" title="<?=$this->transEsc('sidebar_expand')?>">
-    <?=$this->transEsc('Your Account') ?>
-  </a>
+  <?=$this->component('account-offcanvas-show')?>
 <?php endif; ?>
 
 <div class="<?=$this->layoutClass('mainbody')?>">
