Refactor and fix non-offcanvas mode.

--- a/themes/bootstrap3/less/components/offcanvas.less
+++ b/themes/bootstrap3/less/components/offcanvas.less
@@ -2,6 +2,7 @@
 
 .vufind-offcanvas-overlay { display: none; }
 
+// Note: this is used also in non-offcanvas mode as a jump link
 .search-filter-toggle {
   &:extend(.btn);
   &:extend(.btn-default);
