--- a/themes/bootstrap3/templates/checkouts/history.phtml
+++ b/themes/bootstrap3/templates/checkouts/history.phtml
@@ -8,7 +8,7 @@
   $this->headScript()->appendFile('checkouts.js');
 ?>
 
-<?=$this->component('account-offcanvas-show')?>
+<?=$this->component('show-account-menu')?>
 
 <div class="<?=$this->layoutClass('mainbody')?>">
   <h2><?=$this->transEsc('Loan History')?></h2>
