--- a/themes/bootstrap3/templates/myresearch/edit.phtml
+++ b/themes/bootstrap3/templates/myresearch/edit.phtml
@@ -11,7 +11,7 @@
     ) . '<li class="active">' . $this->transEsc('Edit') . '</li>';
 ?>
 <div class="<?=$this->layoutClass('mainbody')?>">
-  <?=$this->component('account-offcanvas-show')?>
+  <?=$this->component('show-account-menu')?>
 
   <h2><?=$this->escapeHtml($this->driver->getBreadcrumb())?></h2>
 
