--- a/themes/bootstrap3/templates/myresearch/illrequests.phtml
+++ b/themes/bootstrap3/templates/myresearch/illrequests.phtml
@@ -9,7 +9,7 @@
     $this->headScript()->appendFile('requests.js');
 ?>
 
-<?=$this->component('account-offcanvas-show')?>
+<?=$this->component('show-account-menu')?>
 
 <div class="<?=$this->layoutClass('mainbody')?>">
   <h2><?=$this->transEsc('Interlibrary Loan Requests') ?></h2>
