--- a/themes/bootstrap3/scss/components/offcanvas.scss
+++ b/themes/bootstrap3/scss/components/offcanvas.scss
@@ -2,6 +2,7 @@ $offcanvas-offset: 80vw;  // Width of open menu
 
 .vufind-offcanvas-overlay { display: none; }
 
+// Note: this is used also in non-offcanvas mode as a jump link
 .search-filter-toggle {
   @extend .btn;
   @extend .btn-default;
