--- a/themes/bootstrap3/templates/holds/list.phtml
+++ b/themes/bootstrap3/templates/holds/list.phtml
@@ -8,7 +8,7 @@
   $this->headScript()->appendFile('requests.js');
 ?>
 
-<?=$this->component('account-offcanvas-show')?>
+<?=$this->component('show-account-menu')?>
 
 <div class="<?=$this->layoutClass('mainbody')?>">
   <h2><?=$this->transEsc('Your Holds and Recalls') ?></h2>
