--- a/themes/bootstrap3/templates/myresearch/checkedout.phtml
+++ b/themes/bootstrap3/templates/myresearch/checkedout.phtml
@@ -11,7 +11,7 @@
   $renewAll = !$this->ilsPaging || !$paginator;
 ?>
 
-<?=$this->component('account-offcanvas-show')?>
+<?=$this->component('show-account-menu')?>
 
 <div class="<?=$this->layoutClass('mainbody')?>">
   <h2><?=$this->transEsc('Your Checked Out Items')?></h2>
