Fix legend, label and MyResearch menu underline.

--- a/themes/bootstrap5/scss/bootstrap-variable-overrides.scss
+++ b/themes/bootstrap5/scss/bootstrap-variable-overrides.scss
@@ -46,3 +46,6 @@ $navbar-light-toggler-icon-bg:      none !default;
 
 $pagination-active-bg:              $primary !default;
 $pagination-active-border:          $primary !default;
+
+$link-hover-decoration:             underline !default;
+$icon-link-underline-offset:        inherit !default;
