Changed check of $templateDir and $templateName to flag in $this->layout() to display notifications in header.

--- a/themes/bootstrap3/templates/header.phtml
+++ b/themes/bootstrap3/templates/header.phtml
@@ -109,7 +109,7 @@
         </ul>
       </nav>
 
-      <?php if(!($this->templateDir == 'search' && $this->templateName == 'home')): ?>
+      <?php if($this->layout()->notifications !== false): ?>
         <?=$this->context($this)->renderInContext('notifications/headerbroadcasts.phtml', [])?>
       <?php endif; ?>
     </div>
