--- a/themes/bootstrap3/templates/search/home.phtml
+++ b/themes/bootstrap3/templates/search/home.phtml
@@ -12,6 +12,8 @@
   }
 
   $this->layout()->breadcrumbs = false;
+
+  $this->layout()->notifications = false;
 ?>
 
 <div class="searchHomeContent">
