--- a/themes/bootstrap3/templates/notifications/editpage.phtml
+++ b/themes/bootstrap3/templates/notifications/editpage.phtml
@@ -1,8 +1,8 @@
 <?php
-    $title = 'Edit Page';
+    $title = 'Edit';
     $submit = 'Save';
     if ($this->addNew) {
-        $title = 'Add Page';
+        $title = 'Add New Notification';
         $submit = 'Save';
     }
 
