--- a/themes/bootstrap3/templates/notifications/deletepage.phtml
+++ b/themes/bootstrap3/templates/notifications/deletepage.phtml
@@ -1,17 +1,17 @@
 <?php
     // Set up page title:
-    $this->headTitle($this->translate('Delete Page'));
+    $this->headTitle($this->translate('Delete'));
 
     // Set up breadcrumbs:
-    $this->layout()->breadcrumbs = '<li><a href="' . $this->url('admin/notifications-pages', ['action' => 'Pages']) . '">' . $this->transEsc('Notifications Pages') . '</a></li> <li class="active">' . $this->transEsc('Delete Page') . '</li>';
+    $this->layout()->breadcrumbs = '<li><a href="' . $this->url('admin/notifications-pages', ['action' => 'Pages']) . '">' . $this->transEsc('Notifications Pages') . '</a></li> <li class="active">' . $this->transEsc('Delete') . '</li>';
 ?>
 
 <a class="search-filter-toggle visible-xs" href="#myresearch-sidebar" data-toggle="offcanvas" title="Expand Sidebar">
-    <?=$this->transEsc('Delete Page') ?>
+    <?=$this->transEsc('Delete') ?>
 </a>
 
 <div class="<?=$this->layoutClass('mainbody')?>">
-  <h2><?=$this->transEsc('Delete Page')?></h2>
+  <h2><?=$this->transEsc('Delete')?></h2>
     <?=$this->flashmessages()?>
 
   <p><?= $this->translate('Are you sure you want to delete the following page?') ?></p>
