--- a/themes/bootstrap3/templates/notifications/deletepage.phtml
+++ b/themes/bootstrap3/templates/notifications/deletepage.phtml
@@ -14,7 +14,7 @@
   <h2><?=$this->transEsc('Delete')?></h2>
     <?=$this->flashmessages()?>
 
-  <p><?= $this->translate('Are you sure you want to delete the following page?') ?></p>
+  <p><?= $this->translate('notifications_delete_page_warning') ?></p>
 
   <b><?= $this->page['nav_title'] . ' / ' . $this->page['headline'] ?></b><br/><br/>
 
