--- a/themes/bootstrap3/templates/_ui/components/offcanvas-hide.phtml
+++ b/themes/bootstrap3/templates/_ui/components/offcanvas-hide.phtml
@@ -2,7 +2,7 @@
     $side = $this->config()->offcanvasSide();
 ?>
 <button class="close-offcanvas btn btn-link" data-toggle="vufind-offcanvas">
-    <?='right' === $side ? $this->icon('offcanvas-hide-right') : ''?>
+    <?='right' === $side ? $this->icon($this->layout()->rtl ? 'offcanvas-hide-left' : 'offcanvas-hide-right') : ''?>
     <span class="btn-link__label"><?=$this->transEsc('navigate_back') ?></span>
-    <?='left' === $side ? $this->icon('offcanvas-hide-left') : ''?>
+    <?='left' === $side ? $this->icon($this->layout()->rtl ? 'offcanvas-hide-right' : 'offcanvas-hide-left') : ''?>
 </button>
