--- a/themes/bootstrap3/templates/notifications/broadcastsform.phtml
+++ b/themes/bootstrap3/templates/notifications/broadcastsform.phtml
@@ -39,9 +39,8 @@
       <div id="notifications-tabs-<?=$language?>" class="notifications-tabs-content<?=$index == 0 ? ' active' : ''?>">
         <div class="form-group">
             <?php $content = $form->get('content_' . $language); ?>
-            <?php $content->setLabelOptions(['disable_html_escape' => true]); ?>
-            <?= $this->formLabel($content) ?>
             <?= $this->formElement($content) ?>
+            <a href="<?php echo $this->url('help-home')?>?topic=markdown" data-lightbox class="help-link"><?=$this->transEsc('Markdown and emoji help')?></a>
             <?= $this->formElementErrors()->render($content, ['class' => 'help-block']) ?>
         </div>
       </div>
