Refactor and rename components.

--- a/themes/bootstrap3/templates/Recommend/SideFacets.phtml
+++ b/themes/bootstrap3/templates/Recommend/SideFacets.phtml
@@ -19,7 +19,7 @@
     }
   }
 ?>
-<?=$this->component('offcanvas-hide')?>
+<?=$this->component('hide-offcanvas-button')?>
 <?php
   $checkboxFilters = $this->recommend->getCheckboxFacetSet();
   $hasVisibleCheckboxes = false;
