--- a/themes/bootstrap3/templates/myresearch/menu.phtml
+++ b/themes/bootstrap3/templates/myresearch/menu.phtml
@@ -1,7 +1,7 @@
 <?php
   $user = $this->auth()->getUserObject();
 ?>
-<?=$this->component('offcanvas-hide')?>
+<?=$this->component('hide-offcanvas-button')?>
 <h3 id="acc-menu-acc-header"><?=$this->transEsc('Your Account')?></h3>
 <nav class="myresearch-menu" aria-labelledby="acc-menu-acc-header">
   <ul class="account-menu">
