--- a/themes/bootstrap3/templates/search/history.phtml
+++ b/themes/bootstrap3/templates/search/history.phtml
@@ -17,7 +17,7 @@
 ?>
 
 <?php if ($saveSupported): // do not show menu toggle if not showing menu! ?>
-  <?=$this->component('show-account-menu')?>
+  <?=$this->component('show-account-menu-button')?>
 <?php endif; ?>
 
 <div class="<?=$this->layoutClass('mainbody')?>">
