--- a/themes/bootstrap3/templates/_ui/components/show-account-menu-button.phtml
+++ b/themes/bootstrap3/templates/_ui/components/show-account-menu-button.phtml
@@ -1,1 +1,1 @@
-<?=$this->component('show-sidebar-button', $this->vars()->getArrayCopy() + ['targetId' => 'myresearch-sidebar', 'linkText' => 'Your Account'])?>
+<?=$this->component('show-sidebar-button', $this->vars()->getArrayCopy() + ['targetId' => 'myresearch-sidebar', 'linkText' => 'Your Account']);
