--- a/themes/bootstrap3/templates/_ui/components/show-search-sidebar-button.phtml
+++ b/themes/bootstrap3/templates/_ui/components/show-search-sidebar-button.phtml
@@ -1,1 +1,1 @@
-<?=$this->component('show-sidebar-button', $this->vars()->getArrayCopy() + ['targetId' => 'search-sidebar', 'linkText' => 'Refine Results'])?>
+<?=$this->component('show-sidebar-button', $this->vars()->getArrayCopy() + ['targetId' => 'search-sidebar', 'linkText' => 'Refine Results']);
