--- a/themes/root/templates/HelpTranslations/de/markdown.phtml
+++ b/themes/root/templates/HelpTranslations/de/markdown.phtml
@@ -11,7 +11,7 @@
     <p>
       Markdown ist eine einfache Methode zur Formatierung von Text mithilfe von Symbolen. Sie können Ihrem
       Text Formatierungen hinzufügen, ohne komplizierte Kodierung lernen zu müssen.
-      <b>In <a href="https://www.markdownguide.org/basic-syntax/" target="_blank">diesem Leitfaden</a>
+      <b>In <a href="https://www.markdownguide.org/basic-syntax/" target="_blank">diesem Markdown Leitfaden</a>
         finden Sie eine ausführliche Erklärung aller Markdown-Funktionen.</b> Im Folgenden finden Sie einige Beispiele.
     </p>
     <p>
@@ -43,7 +43,7 @@
       Adresse der Website in Klammern ().
     </p>
     <pre class="code">
-      [VuFind](https://vufind.org)</pre>
+      [VuFind&reg;](https://vufind.org)</pre>
   </dd>
   <dt><a id="emojis"></a>Emojis</dt>
   <dd>
@@ -60,7 +60,7 @@
         :+1:
         :heart:</pre>
     <p>
-      <b>Eine detaillierte Liste der unterstützten Emojis finden Sie <a href="https://packagist.org/packages/elgigi/commonmark-emoji#user-content-emoji-list" target="_blank">hier</a></b>
+      <b>Eine detaillierte Liste der unterstützten Emojis finden Sie in <a href="https://packagist.org/packages/elgigi/commonmark-emoji#user-content-emoji-list" target="_blank">der commonmark-emoji Dokumentation.</a></b>
     </p>
   </dd>
 </dl>
