--- a/themes/root/templates/HelpTranslations/en/markdown.phtml
+++ b/themes/root/templates/HelpTranslations/en/markdown.phtml
@@ -11,7 +11,7 @@
     <p>
       Markdown is a simple way to format text using symbols. You can add formatting to your text without needing
       to learn complicated coding.
-      <b>Please see <a href="https://www.markdownguide.org/basic-syntax/" target="_blank">this guide</a>
+      <b>Please see <a href="https://www.markdownguide.org/basic-syntax/" target="_blank">the Markdown guide</a>
         for a detailed explanation of all markdown features.</b> Some examples are given below.
     </p>
     <p>
@@ -43,12 +43,12 @@
       website address in parentheses ().
     </p>
     <pre class="code">
-      [VuFind](https://vufind.org)</pre>
+      [VuFind&reg;](https://vufind.org)</pre>
   </dd>
   <dt><a id="emojis"></a>Emojis</dt>
   <dd>
     <p>
-      Emojis ca be included into the text by this general syntax:
+      Emojis can be included into the text by this general syntax:
     </p>
     <pre class="code">
         :KEY:</pre>
@@ -60,7 +60,7 @@
         :+1:
         :heart:</pre>
     <p>
-      <b>A detailed list of supported emojis can be found <a href="https://packagist.org/packages/elgigi/commonmark-emoji#user-content-emoji-list" target="_blank">here</a></b>
+      <b>A detailed list of supported emojis can be found in <a href="https://packagist.org/packages/elgigi/commonmark-emoji#user-content-emoji-list" target="_blank">the commonmark-emoji documentation.</a></b>
     </p>
   </dd>
 </dl>
