--- a/themes/bootstrap3/templates/notifications/pagesform.phtml
+++ b/themes/bootstrap3/templates/notifications/pagesform.phtml
@@ -56,7 +56,7 @@ $form->prepare();
               <?php $content = $form->get('content_' . $language); ?>
               <?= $this->formLabel($content) ?>
               <?= $this->formElement($content) ?>
-              <a href="<?php echo $this->url('help-home')?>?topic=markdown" data-lightbox class="help-link"><?=$this->transEsc('Markdown and emoji help')?></a>
+              <a href="<?=$this->url('help-home', [], ['query' => ['topic' => 'markdown']])?>" data-lightbox class="help-link"><?=$this->transEsc('Markdown and emoji help')?></a>
               <?= $this->formElementErrors()->render($content, ['class' => 'help-block']) ?>
           </div>
         </div>
