--- a/themes/bootstrap3/less/components/record.less
+++ b/themes/bootstrap3/less/components/record.less
@@ -106,10 +106,17 @@
 
 /* ------ Tags ------ */
 .tag-record {
-  &:extend(.toolbar-btn);
+  float: right;
+  margin: 2px 0 1rem 1rem;
+  padding: @padding-base-vertical @padding-base-horizontal;
 
   &:hover {
     text-decoration: none;
+  }
+
+  @media (max-width: @screen-sm-max) {
+    margin-left: 0.5rem;
+    padding: @padding-base-vertical calc(@padding-base-horizontal / 2);
   }
 }
 
@@ -125,16 +132,16 @@
   padding: 3px 7px;
   font-weight: normal;
 }
-.tagList button .fa-close { margin-top: 3px; }
 .tagList {
   .tag {
     display: inline-block;
-    margin: 0 1px 1px;
-    border-radius: 4px;
+    margin: 2px 1px 1px;
+    border: 1px solid @btn-default-border;
     // Use bootstrap mixin to make tags look like buttons
     .button-size(@padding-base-vertical; @padding-base-vertical; @font-size-base; @line-height-base; @border-radius-base);
     &.selected {
       background-color: @btn-primary-bg;
+      border-color: @btn-primary-border;
       a { color: #fff; }
       .badge {
         color: @gray-darker;
