--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -705,6 +705,10 @@ body.rtl {
   &:extend(.table all);
   &:extend(.table-striped all);
   &:extend(.table-responsive all);
+
+  td.history_results, td.history_actions {
+    word-wrap: normal;
+  }
 }
 table.search-history-table {
   table-layout: auto;
