Fixed id for ajax requests in broadcast overview table.

--- a/themes/bootstrap3/templates/notifications/broadcasts.phtml
+++ b/themes/bootstrap3/templates/notifications/broadcasts.phtml
@@ -27,7 +27,7 @@
     </thead>
     <tbody>
       <?php foreach($this->broadcastsList as $broadcast): ?>
-        <tr data-broadcast-id="<?=$broadcast['id']?>">
+        <tr data-broadcast-id="<?=$broadcast['broadcast_id']?>">
           <td>
             <span class="reorder">
               <?=$this->icon('notifications-order') ?>
